<resources>

    <string name="app_name">Guess Number Helper (AD version)</string>
    <string name="title_activity_main">GN Helper</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About Guess Number Helper</string>
    <string name="menu_restart">Restart</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_intro">Introduction</string>
    <string name="menu_facebook">Page@Facebook</string>
    <string name="menu_about">About</string>
    <string name="label_guess">Guess</string>
    <string name="label_result">Result</string>
    <string name="label_prefs_guess_method_random">Random choose</string>
    <string name="label_prefs_guess_method_1234first">1234 first</string>
    <string name="btn_result_add">Add\nresult</string>
    <string name="prefs_digit_count">The number of digits</string>
    <string name="prefs_guess_method">The guess method</string>
    <string name="content_about">This application helps people playing guess number game.\nGuess number is usually a game playing between 2 players. At beginning of the game, each player keeps one 4-digit secret number in mind. The number is formed with digits which range from 0 to 9, and each digit cannot be repeated.\nDuring the game, one player proposes a number for guess attempt, the other player replies the result compared between the guess and the secret number. The result is composed of how many digits has the player guessed on the same position (noted as <i>A</i>) and how many digits has the player guessed on different position (noted as <i>B</i>). For example, when the secret number is 1234 and the guess is 1357, the result will be 1A1B. (1 is at the same position, 3 is at different position.)</string>
    <string name="notify_congra">Congratulations! The answer must be:</string>
    <string name="notify_congra_lucky">Congratulation! We\'re so lucky :D</string>
    <string name="notify_badformat_guess">Er, the guess number is incorrect!</string>
    <string name="notify_badformat_result">Er, the result is incorrect!</string>
    <string name="notify_nosuchnumber">Something terrible happened, I cannot help you any more :(</string>
    <string name="desc_interrupt_intro">Press \'BACK\' key to end introduction.</string>
    <string name="desc_restart">First, press \'Restart\' on the Action Bar to start helper.</string>
    <string name="desc_number_1">After calculating, helper will show you suggested number.</string>
    <string name="desc_number_2">Don\'t like this number? You are free to scroll wheels to the number you like.</string>
    <string name="desc_number_3">Use this number to ask your opponent.</string>
    <string name="desc_result_1">Get result from your opponent, and let helper know.</string>
    <string name="desc_result_2">Press \'Add result\' button, the current result will be recorded.</string>
    <string name="desc_result_3">Then, helper will calculate the next suggested number.</string>
    <string name="desc_step_repeat">Repeat previous steps until the opponent\'s secret number is found.</string>
    <string name="desc_notice_1">Notice: the calculating time is increased with the number of digits, please be patient.</string>

</resources>